# src/controllers/passenger.js
@@ -38,8 +38,7 @@ module.exports = {
             #swagger.parameters['body'] = {
                 in: 'body',
                 required: true,
-                schema: {
-                }
+                schema: {$ref:'#/definitions/Passenger'}
             }
         */
 
@@ -75,8 +74,7 @@ module.exports = {
             #swagger.parameters['body'] = {
                 in: 'body',
                 required: true,
-                schema: {
-                }
+                schema: {$ref:'#/definitions/Passenger'}
             }
         */
 
